tests/error/compile/var_empty_key.wks
# @desc: Empty variable key detection
# @expect-error: Variable name resolves to empty string

# Test empty variable key error
:var "" "value"
a "Test" +write %{{echo test}}
